[Autocomplete] fix long option label to wrap instead of scrollbar (#4416)
* [Autocomplete] auto wrap option label

* [Autocomplete] add prop to all option action label to wrap

--- a/src/components/Autocomplete/components/MappedAction/MappedAction.scss
+++ b/src/components/Autocomplete/components/MappedAction/MappedAction.scss
@@ -109,4 +109,8 @@ $item-vertical-padding: ($item-min-height - line-height(body)) / 2;
 .Text {
   @include layout-flex-fix;
   flex: 1 1 auto;
+
+  .ContentWrap {
+    @include text-breakword;
+  }
 }
